<resources>
    <string name="app_name">Mongo Explorer</string>
    <string name="title_connection_detail">Connection</string>
    <string name="title_connection_list">Connections</string>
    <string name="title_edit_connection">Setup Connection</string>
    <string name="title_edit_collection">Collection Name</string>
    <string name="title_document_list">Documents</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_change_database">Change Database</string>
    <string name="title_no_databases">No Databases</string>
    <string name="name">Name</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="database">Database</string>
    <string name="user">Username</string>
    <string name="password">Password</string>    
    <string name="confirm_delete_connection">Are you sure you want to delete this connection?</string>
    <string name="confirm_drop_collection">Are you sure you want to drop this collection?</string>
    <string name="really_confirm_drop_collection">This will delete ALL your documents! Are you SURE?</string>
    <string name="confirm_delete_document">Are you sure you want to delete this document?</string>
    <string name="connect">Connect</string>
    <string name="never_connected">Never Connected</string>
    <string name="last_connected">Last connected %s</string>
    <string name="connect_failed">Connect Failed</string>
    <string name="title_collection_list">Collections</string>
    <string name="load_more">Load More &#8230;</string>
    <string name="document">Document</string>
    <string name="edit_document">Edit Document</string>
    <string name="add_document">New Document</string>
    <string name="error_has_occurred">An Error has Occurred</string>
    <string name="clear">Clear</string>
    <string name="load_query">Load Query</string>
    <string name="no_saved_queries">You don\'t have any queries stored for this connection and collection</string>
    <string name="message_no_databases">Unable to list databases. Check permissions.</string>
    <string name="show_system_collections">Show System Collections</string>
    <string name="document_load_size">Document Load Size</string>
    <string name="collections">Collections</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="connection_detail">Connection Detail</string>
    <string name="connections">Connections</string>
    <string name="documents">Documents</string>
    <string name="new_version">New Version!</string>
    <string name="new_version_detail">* Material design updates\n* Pull to refresh list views\n* Use floating action button to add new items\n* Bug fixes</string>
</resources>
